# metabolic_refinement

./: README.md  pyproject.toml
examples/config/: essentiality.yaml  ga_config.yaml  genome_evidence.yaml  model_sources.yaml  omics.yaml  run.yaml  scoring.yaml  tasks.yaml  thermo.yaml
examples/data/: rnaseq.tsv
examples/models/: iJO1366.xml
gapx/: __init__.py  runner.py
gapx/api/: __init__.py
gapx/cli/: __init__.py  main.py
gapx/config/: __init__.py  loader.py  models.py
gapx/eval/: __init__.py
gapx/fitness/: __init__.py
gapx/ga/: __init__.py
gapx/io/: __init__.py
gapx/parallel/: __init__.py
gapx/repair/: __init__.py
gapx/tasks/: __init__.py
pydantic/: __init__.py
tests/: test_config_loader.py
